<resources>
    <string name="app_name" translatable="false">DualBoot Companion App</string>
    <string name="shortcut1">Slot B</string>
    <string name="shortcut1_long">Reboot to Slot B</string>
    <string name="shortcut1_disabled">Reboot disabled</string>

    <string name="shortcut2">Slot A</string>
    <string name="shortcut2_long">Reboot to Slot A</string>
    <string name="shortcut2_disabled">Reboot disabled</string>

    <string name="shortcut3">Recovery B</string>
    <string name="shortcut3_long">Reboot to Recovery B</string>
    <string name="shortcut3_disabled">Reboot disabled</string>

    <string name="shortcut4">Recovery A</string>
    <string name="shortcut4_long">Reboot to Recovery A</string>
    <string name="shortcut4_disabled">Reboot disabled</string>

    <string name="Active_Slot">Treble device found!\nActive Slot: </string>
    <string name="dialog_confirmation">Do you want to reboot, are you sure?</string>
    <string name="reboot_to_recovery">Reboot to Recovery</string>
    <string name="reboot_to_system">Reboot to System</string>
    <string name="delete_npassword">Delete inactive Slot password</string>
    <string name="reboot_bootloader">Reboot Bootloader</string>
    <string name="title_activity_info">About</string>
    <!-- Strings used for fragments for navigation -->

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="Ready">Ready</string>
    <string name="not_found" translatable="false">NOT FOUND</string>
    <string name="DualBoot" translatable="false">DualBoot</string>
    <string name="linkxda" translatable="false">Information:&lt;br>&lt;br>&lt;a href=https://forum.xda-developers.com/t/recovery-dualboot-unified-a10-a11-oos11-orangefox-dualboot-unified-reborn-06-02-2021.4177865/>Xda DualBoot Thread&lt;/a>&lt;br>&lt;br>&lt;a href=https://github.com/Invernomut0?tab=repositories>GitHub DualBoot Thread&lt;/a>&lt;br>&lt;br>&lt;a href=https://t.me/OrangeFoxDualBootRebornOnePlus7>Telegram Support chat&lt;/a></string>
    <string name="options">Options</string>
    <string name="clear_password_when_reboot_to_other_system_slot">Clear password when Reboot to INACTIVE system slot</string>
    <string name="AppStarted">Application Started</string>
    <string name="reading_options">Reading options</string>
    <string name="reboot_whitout_confirmation">Reboot without confirmation</string>
    <string name="console_log">Console Log</string>
    <string name="locksettings_not_found">locksettings.db not found!</string>
    <string name="remove_locksettings">Removing locksettings.db</string>
    <string name="active_slot">" - Active slot: "</string>
    <string name="slota">Slot A</string>
    <string name="slotb">Slot B</string>
    <string name="Android_information">Android Information</string>
    <string name="security_patch">"Security Patch: "</string>
    <string name="Release_version">"Release Version: "</string>
    <string name="Release_key">"Release Key: "</string>
    <string name="build">"Build: "</string>
    <string name="build_id">"Build Id: "</string>
    <string name="Build_flavor">"Build Flavor: "</string>
    <string name="share_app">Share app  - EXPERIMENTAL!</string>
    <string name="shared_app_title">Shared App</string>
    <string name="application_list_saved_old">Application list saved!</string>
    <string name="installing_bootctl">Installing bootctl to /data/adb/DualBoot</string>
    <string name="bootctl_wrong">Something went terribly wrong</string>
    <string name="mount_inactive_data">Mount inactive data</string>
    <string name="mount_inactive_system">Mount inactive system</string>
    <string name="data_encrypted"> is encrypted.</string>
    <string name="unknown_fiesystem">Unknown filesystem</string>
    <string name="data_partition">Data partition</string>
    <string name="no_shared_app">Shared App - it works only on A/B/C layout</string>
    <string name="bootctl_empty">Bootctl Error:Empty response.</string>
    <string name="bootctl_error">"Bootctl Error: "</string>
    <string name="error_to_dismount">"Error to dismount "</string>
    <string name="dismount">Dismount</string>
    <string name="erasing_password">"Erasing password: "</string>
    <string name="version">"Version: "</string>
    <string name="shared_app_disabled_log">A/b/c layout not found. Shared app feature is disabled</string>
    <string name="Device_not_compatible">No compatible device found.</string>
    <string name="inactive_sys_mounted">"Inactive system mounted to "</string>
    <string name="inactive_sys_unmounted">Inactive system dismounted</string>
    <string name="inactive_sdcard_dismounted">Inactive SD Card dismounted</string>
    <string name="system">"System: "</string>
    <string name="inactive_sd_card">Inactive SDCard mounted</string>
    <string name="inactive_system_mounted">Inactive System mounted</string>
    <string name="inactive_sdcard_mounted">"Inactive Sd Card mounted to "</string>
    <string name="yes">Yes</string>
    <string name="Cancel">No</string>
    <string name="reboot_to">Reboot to</string>
    <string name="reboot_to_bootloader">Reboot to Bootloader</string>
    <string name="recovery">Recovery:</string>
    <string name="orangefox_dualboot" translatable="false">OrangeFox DualBoot</string>
    <string name="application_list_saved">Application list saved!</string>
    <string name="device">"Device: "</string>
    <string name="dualboot_found">Checking DualBoot: Found!</string>
    <string name="dualboot_not_found">Checking DualBoot: Not Found!</string>
    <string name="dualboot_layout">"DualBoot layout: "</string>
    <string name="selinux_permissive">Setting seLinux permissive</string>
    <string name="send_issue">Open issue/request on github</string>
    <string name="check_update_title">Update available</string>
    <string name="check_out_latest_version">Check out the latest version available!</string>
    <string name="update_not_available">Update not available</string>
    <string name="no_update_available">No update available. Check for updates again later!</string>
    <string name="update_now">Update now?</string>
    <string name="update_later">Maybe later</string>
    <string name="share_data_app">Shared data for apps - EXPERIMENTAL</string>
    <string name="working_on">"Working on "</string>
    <string name="title_activity_shared_app_settings">SharedAppSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="shared_data">Shared Data</string>
    <string name="delete_data"><![CDATA[<b>DELETE DATA!</b>]]></string>
    <string name="delete_data_content"><![CDATA[<b>Are you really sure?</b><br/><br/>All data in shared folder will be deleted! No recovery will be possible<br/><br/>Application: ]]></string>
    <string name="data_app_deleted">Data application deleted!</string>
    <string name="idle">Idle</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="restore_data"><![CDATA[<b>RESTORE DATA!</b>]]></string>
    <string name="resore_data_content"><![CDATA[<b>Are you really really sure?</b><br/><br/>All data in shared folder will be deleted and your /data/data/ overwrited!! No recovery will be possible<br/><br/>Application: ]]></string>
    <string name="shared_app">Installed on other slot</string>
    <!--
    <string name="shortcut3">-</string>
    <string name="shortcut3_long">Long shortcut 3</string>
    <string name="shortcut3_disabled">Disabled shortcut 3</string>
    -->
</resources>
