<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut1"
        android:enabled="true"
        android:icon="@drawable/b"
        android:shortcutShortLabel="@string/shortcut1"
        android:shortcutLongLabel="@string/shortcut1_long"
        android:shortcutDisabledMessage="@string/shortcut1_disabled">
        <intent
            android:action="RebootB"
            android:targetPackage="com.invernomuto.DualBoot"
            android:targetClass="com.invernomuto.DualBoot.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut2"
        android:enabled="true"
        android:icon="@drawable/a"
        android:shortcutShortLabel="@string/shortcut2"
        android:shortcutLongLabel="@string/shortcut2_long"
        android:shortcutDisabledMessage="@string/shortcut2_disabled">
        <intent
            android:action="RebootA"
            android:targetPackage="com.invernomuto.DualBoot"
            android:targetClass="com.invernomuto.DualBoot.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut3"
        android:enabled="true"
        android:icon="@drawable/rb"
        android:shortcutShortLabel="@string/shortcut3"
        android:shortcutLongLabel="@string/shortcut3_long"
        android:shortcutDisabledMessage="@string/shortcut3_disabled">
        <intent
            android:action="RebootRB"
            android:targetPackage="com.invernomuto.DualBoot"
            android:targetClass="com.invernomuto.DualBoot.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut4"
        android:enabled="true"
        android:icon="@drawable/ra"
        android:shortcutShortLabel="@string/shortcut4"
        android:shortcutLongLabel="@string/shortcut4_long"
        android:shortcutDisabledMessage="@string/shortcut4_disabled">
        <intent
            android:action="RebootRA"
            android:targetPackage="com.invernomuto.DualBoot"
            android:targetClass="com.invernomuto.DualBoot.MainActivity" />
    </shortcut>
</shortcuts>