<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

                <Toolbar
                    style="@style/Toolbar"
                    android:contentInsetStart="0dp">

                        <ImageView
                            android:id="@+id/guillotine_hamburger"
                            style="@style/ImageView.Hamburger"
                            android:src="@drawable/ic_menu_90" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:fontFamily="@font/duru_sans"
                            android:text="@string/options"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                </Toolbar>


                <LinearLayout
                    android:id="@+id/options"
                    style="@style/LinearLayout.GuillotineItem"
                    android:layout_marginTop="@dimen/guillotine_medium_margin">
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ErasePWD"
                    style="@style/LinearLayout.GuillotineItem"
                    android:layout_marginTop="8dp">

                        <ImageView
                            style="@style/ImageView.GuillotineItem"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="24dp"
                            android:src="@drawable/recycle"
                            android:contentDescription="TODO"
                            app:tint="#FFFFFF" />

                    <Switch
                        android:id="@+id/pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/duru_sans"
                        android:text="@string/clear_password_when_reboot_to_other_system_slot"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Warn"
                    style="@style/LinearLayout.GuillotineItem"
                    android:layout_marginTop="8dp">

                    <ImageView
                        style="@style/ImageView.GuillotineItem"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="24dp"
                        android:contentDescription="TODO"
                        app:srcCompat="@android:drawable/stat_notify_error"
                        app:tint="#FFFFFF" />

                    <Switch
                        android:id="@+id/NoWarn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/duru_sans"
                        android:text="@string/reboot_whitout_confirmation"
                        android:textSize="16sp" />

                </LinearLayout>

        </LinearLayout>
